# rust-expr-reqwest

./: Cargo.toml  README.md
.cargo/: config.toml.x86_64-unknown-linux-gnu
data/: avgPrice-BTCUSDT-2021-03-24.txt  depth-BTCUSDT-2021-03-24.txt
src/: account_info.rs  de_string_or_number.rs  exchange_info.rs  main.rs  order_response.rs  signature_binance.rs
