[package]
name = "expr-reqwest"
version = "0.1.0"
authors = ["Wink Saville <wink@saville.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["json"] }
tokio = { version = "1.4.0", features = ["full"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
hex-literal = "0.3.1"
hmac = "0.10.1"
sha2 = "0.9.3"
hex = "0.4.3"
chrono = "0.4.19"

[dev-dependencies]
